fixed hero on small screens

--- a/swimmers-guide/styles/styles.css
+++ b/swimmers-guide/styles/styles.css
@@ -465,6 +465,7 @@ footer a:hover {
     }
     header img.logo {
         width: 100px;
+        box-shadow: 5px 5px 10px black;
     }
     footer {
         margin-top: 10px;
@@ -478,7 +479,13 @@ footer a:hover {
     #hero, #home-grid {
         height: auto;
     }
-    #hero-msg-block, #hero-msg {
+    #hero-msg-block {
+        margin-top: 20px;
+        grid-column: 1 / 4;
+        width: 75%;
+        height: 70%;
+    }
+    #hero-msg {
         margin-top: 20px;
         font-size: small;
         grid-column: 1 / 4;
